# llmops-with-haystack

./: .gitignore  Dockerfile  README.md  app.py  chainlit.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
first-rag-bot/chainlit-app/: app.py
rag-on-csv-json-file/: exploration.ipynb  faiss_document_store.db
retrieval-qa/: Dockerfile  README.md  app.py  chainlit.md  datadownload.py  faiss_document_store.db  faissdenseretrieval.py  pyproject.toml  requirements.txt  retrieve.ipynb
retrieval-qa/.chainlit/: config.toml
retrieval-qa/diagram/: .$pipeline.drawio.bkp  pipeline.drawio
src/: app.py
website-qa-chatbot/: aboutus.txt  app.py  chainlit.md  faiss_document_store.db  prototyping.ipynb  qapipeline.py  websites.txt  websites_2.txt
website-qa-chatbot/.chainlit/: config.toml  style.css
